[project]
name = "socmed-backend-sample"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.2.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
