[project]
name = "socmed-backend-sample"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "redis>=7.3.0",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "bandit>=1.9.4",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "types-redis>=4.6.0.20241004",
]

[tool.ruff]
target-version = "py314"
extend-exclude = [
    "migrations/versions",
]

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_codes = true
files = ["src"]
exclude = [
    "__pycache__",
    ".venv",
    "migrations",
    "tests",
]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

[tool.bandit]
exclude_dirs = [
    "__pycache__",
    ".venv",
    "migrations",
    "tests",
]

[tool.pytest]
minversion = "9.0"
strict = true
addopts = [
    "-v",
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--no-cov-on-fail",
]
testpaths = [
    "src/tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
