[project]
name = "socmed-backend-sample"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "pyjwt[crypto]>=2.12.1",
    "redis[hiredis]>=7.4.0",
    "sqlmodel>=0.0.38",
    "zxcvbn>=4.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "testcontainers[postgres,redis]>=4.14.2",
    "ty>=0.0.34",
]

[tool.ruff]
target-version = "py314"
extend-exclude = ["src/migrations/versions/"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "W",     # pycodestyle
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "S",     # flake8-bandit
    "B",     # flake8-bugbear
    "ASYNC", # flake8-async
    "DTZ",   # flake8-datetimez
    "UP",    # pyupgrade
    "PT",    # flake8-pytest-style
]

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["S101"]

[tool.ty.src]
exclude = ["src/migrations/versions/"]

[tool.pytest]
minversion = "9.0"
addopts = ["--strict", "--verbose", "--tb=short", "--cov=src", "--cov-report=term-missing"]
testpaths = ["src/tests"]

[tool.coverage.run]
omit = [
    "src/migrations/*",
    "src/tests/*",
]